# atramentarium

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
atramentarium/: atramentarium.py
tests/: README.md  __init__.py  test_command_completer.py  test_parse_command_list.py  test_prompt.py
