[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atramentarium"
version = "0.6"
requires-python = ">=3.11"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Python CLI minilib to enable simple command completion."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

license = "MIT"
license-files = ["LICENSE"]

keywords = ["command", "completion", "readline"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/carlosplanchon/atramentarium.git"

[tool.setuptools]
packages = ["atramentarium"]
