[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atramentarium"
version = "0.7"
requires-python = ">=3.11"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Python CLI minilib to enable simple command completion."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

license = "MIT"
license-files = ["LICENSE"]

keywords = ["command", "completion", "readline"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/carlosplanchon/atramentarium.git"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0"
]

[tool.setuptools]
packages = ["atramentarium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=atramentarium",
    "--cov-report=term-missing",
    "--cov-report=html"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests"
]
